<resources>
    <string name="app_name">BookStore CM</string>
    <string name="facebook_app_id">205389230884647</string>
    <string name="fb_login_protocol_scheme">fb205389230884647</string>
    <string name="sign_in_with_facebook">Me connecter avec Facebook</string>
    <string name="sign_in_with_google">Me connecter avec Google</string>
    <string name="sign_in_with_twitter">Me connecter avec Twitter</string>
    <string name="sign_in_with_email">Me connecter avec mes identifiants</string>
    <string name="sign_up_with_facebook">M\'inscrire avec Facebook</string>
    <string name="sign_up_with_google">M\'inscrire avec Google</string>
    <string name="sign_up_with_twitter">M\'inscrire avec Twitter</string>
    <string name="sign_up_with_email">M\'inscrire</string>
    <string name="or">ou</string>
    <string name="not_sign_up"><u>Pas encore inscrit</u></string>
    <string name="already_registered"><u>Déjà inscrit</u></string>
    <string name="pass_this"><u>passer cette étape</u></string>
    <string name="text_sign_in">Vous avez déjà un compte BookStore ? \n Connectez-vous dès maintenant</string>
    <string name="text_sign_up">Vous n\'avez pas de compte BookStore ?\n Inscrivez-vous en quelques secondes</string>
    <string name="am_connect">Je me connecte</string>
    <string name="am_sign_up">Je m\'inscris</string>
    <string name="pass_forgot">Mot de passe oublié ?</string>
    <string name="prompt_email">Adresse e-mail</string>
    <string name="prompt_email_facultatif">Adresse e-mail (facultatif)</string>
    <string name="prompt_login">Numero téléphone ou adresse e-mail</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_confirm_password">Confirmation</string>
    <string name="prompt_name">Nom</string>
    <string name="prompt_surname">Prénom</string>
    <string name="text_in_sign_up">En vous inscrivant, vous acceptez les</string>
    <string name="text_use_condition"><u>Conditions Générales d\'Utilisation</u></string>
    <string name="invalid_login">Votre adresse email ou numéro de téléphone n\'est pas sous un bon format (ex: +237 655448877 ou roncoder@bookstore.com)</string>
    <string name="invalid_password">Le mot de passe doit contenir au moins 6 caractères</string>
    <string name="invalid_surname">Votre prénom doit contenir au moins 3caractères</string>
    <string name="invalid_name">Votre nom doit contenir au moins 3caractères</string>
    <string name="home">Home</string>
    <string name="search">Rechreche</string>
    <string name="favorites">Favoris</string>
    <string name="account">Compte</string>
    <string name="sign_in_up">M\'inscrire / Me connecter</string>
    <string name="my_information">Mes informations</string>
    <string name="my_account">Mon Compte</string>
    <string name="my_favorites">Mes favoris</string>
    <string name="welcome">Bienvenue</string>
    <string name="settings">Réglages</string>
    <string name="help">Aide</string>
    <string name="note_app">Noter l\'application</string>
    <string name="contact_us">Nous contacter</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="copyright">©Copyright - 2020, DarkComputerClub - RonCoder \n Tous droits réservés</string>
    <string name="your_books">Application de vente de livres scolaire en ligne …</string>
    <string name="notifications">Notifications</string>
    <string name="allow_notifications">Autoriser les notifications</string>
    <string name="first_cycle">Premier cycle</string>
    <string name="second_cycle">Second cycle</string>
    <string name="third_cycle">Troisieme cycle</string>
    <string name="classes">Classes</string>
    <string name="see_all">Tout voir</string>
    <string name="invalid_confirm_password">Le mot de passe de confirmation est incorrect.</string>
    <string name="buy">Acheter</string>
    <string name="commended">Commander</string>
    <string name="cart">Chariot</string>
    <string name="manager">Manager</string>
    <string name="add_to_cart">Ajouter au chariot</string>
    <string name="your_cart">Votre chariot</string>
    <string name="title">Titre</string>
    <string name="author">Auteur : </string>
    <string name="edition">"Edition : "</string>
    <string name="state">"Etat du livre : "</string>
    <string name="prise">"Prix unitaire : "</string>
    <string name="quantity">"Quantité disponible : "</string>
    <string name="all_cycle_book">Livres disponible</string>
    <string name="all_books_for">Touts les livres</string>
    <string name="primary_cycle">Cycle primaire</string>
    <string name="book_name">Recherche par titre, auteur, edition…</string>
    <string name="empty_result">Pas de resultat… !</string>
    <string name="message">Message</string>
    <string name="classe_label">Classe concerné :</string>
    <string name="book">Livre(s)</string>
    <string name="total_prise">"Prix Total : "</string>
    <string name="maked_commended">Terminer la commande du document</string>
    <string name="finish">Terminé</string>
    <string name="remove">Rétirer</string>
    <string name="cancel">Annuler</string>
    <string name="_0">0</string>
    <string name="add">Ajouter</string>
    <string name="remove_to_cart">Retirer</string>
    <string name="total">"Total : "</string>
    <string name="more_info_about"><u>Plus de détails sur l\'article</u></string>
    <string name="comfim">Messsage de confirmation</string>
    <string name="confir_removed_to_cart">Voulez-vous vraiment rétirer cette command de votre chariot ?</string>
    <string name="yes">Oui</string>
    <string name="remove_success">Rétiré avec succès.</string>
    <string name="no">Non</string>
    <string name="messages_chat">Votre boite de chat</string>
    <string name="send">Envoyer</string>
    <string name="enter_message">Entrer votre message....</string>
    <string name="confir_disconnect">Voulez-vous vraiment vous déconnecter de cette application ?</string>
    <string name="book_number">"Quantité de livre : "</string>
    <string name="valide">Valider</string>
    <string name="contact_name">Nom complet.</string>
    <string name="contact_phone">Saisir un numero de téléphone</string>
    <string name="district">Ville</string>
    <string name="district_label">Ville (Les autres villes sont à venir)</string>
    <string name="street">Localité (Emplacement de livraison)</string>
    <string name="valid_address">Valider la commande</string>
    <string name="definid_this_as_default_address">Définir cette adresse comme adresse de livraison par défaut</string>
    <string name="no_shipping">Recupérer votre collis dans le point de vente concerner</string>
    <string name="note_about_no_shipping">Pour cette option, si le bénéficière ne debourse pas son collis après 2 jours de la commande, cette dernière sera momentanément annulée.</string>
    <string name="waranty_or_shipping">Garantie / Adresse de livraison</string>
    <string name="more_description">Description de votre adresse (Précision)</string>
    <string name="more_description_example">ex: Carrefour acacia, 50 mètres après la maison MTN en allant vers le rond-point express, du même côté que la maison MTN …</string>
    <string name="shipping_type">Type de livraison</string>
    <string name="standart_shipping_text">Pour cette option, vous serez livré dans 2 jours. Le coût de livraison sera 500 FCFA</string>
    <string name="standart_shipping">Livraison standard (Dans 2 jours, 5OO FCFA)</string>
    <string name="exprss_shipping">Livraison express (Dans 2 à 3h, 2000 FCFA)</string>
    <string name="shipping_express_text">Pour cette option, vous serez livré dans 3 à 4 heures de temps. Le coût de livraison ici est de 2,000 FCFA</string>
    <string name="not_subscribed">Gestion et administration de votre compte utilisateur</string>
    <string name="title_activity_administration">administration</string>
    <string name="administration">Administration</string>
    <string name="commends_admin">Administration / Rapport</string>
    <string name="delivered_bills">F.Livrées</string>
    <string name="obsolete_bills">F.Obsoletes</string>
    <string name="bills_shipping_standard">F.Standards</string>
    <string name="bills_shipping_express">F.Express</string>
    <string name="bills_shipping_instant">F.Instant.</string>
    <string name="section">Section</string>
    <string name="instant_shipping">Livraison instantanée (Dans les 24 heures, 500 FCFA)</string>
    <string name="instant_shipping_text">Pour cette option, nous ne livrons qu\'aux localitées ci-dessous. Le coût de livraison sera de 500 FCFA.</string>
    <string name="franco_section">Section Francophone</string>
    <string name="anglo_section">Section Anglophone</string>
    <string name="localisation">Choisir une localitée</string>
    <string name="message_about_cmd">Message des clients</string>
    <string name="loerm">Lorem Ipsum is simply dummy text of the printing and type setting industry.</string>
    <string name="localisation_chose">Localitée chosit : </string>
    <string name="address_desc">Adresse décrite : </string>
    <string name="total_for_buy">"Prix total à payer : "</string>
    <string name="commend_state">Etat de la bill</string>
    <string name="title_cmd_detail">Détails sur la bill.</string>
    <string name="login">Login</string>
    <string name="sing_up">Inscription</string>
    <string name="which_quantity">Quelle quantité voulez-vous ?</string>
    <string name="street_ex">ex : Chappelle Melen ou Carrefour Obili, ou lycée Efoulan ou etc.</string>
    <string name="yaounde">Yaoundé</string>
    <string name="ok">OK</string>
    <string name="this_has_no_billed_cmd">Cette action est impossible, car dans cette liste contient des commandes non facturées. Veuillez resoudre ce problème avant le chat avec un administrateur de commandes.</string>
    <string name="all_cmd_has_dit_bill">Toutes ces commandes ont déjà été facturées, dont l\'achat global est impossible ici.</string>
    <string name="books_in_total">Livre(s) au total</string>
    <string name="set_the_receiver_of_this_cmd">Indiquer le nom de la personne qui recevra ce colis !</string>
    <string name="set_the_phone">Indiquer le téléphone !</string>
    <string name="add_successful">Ajoutée avec succès.</string>
    <string name="no_result_found">Pas de résultat(s) trouvés pour</string>
    <string name="deleting">Suppression…</string>
    <string name="valid_successful">Validée avec succès.</string>
    <string name="validation">Validation…</string>
    <string name="cmd_not_billed_to_validate">Cette commande n\'est pas facturée pour être validée. Veuillez la facuter en cliquant sur le bouton *Acheter*.</string>
    <string name="wait_a_moment">Patientez…</string>
    <string name="connect_successful">Connecté avec succès.</string>
    <string name="send_mail">Envoie d\'e-mail.</string>
    <string name="allow_notification_summary">Recevoir une notification pour vous avisez de la disposition d\'un nouveau livre au programme.</string>
    <string name="your_all_ready_auth">Vous êtes déjà authentifié.</string>
    <string name="error_has_provide">Une erreur est survenu.</string>
    <string name="configuration_of_new_pass">Configuration d\'un nouveau mot de passe pour votre compte.</string>
    <string name="email_not_send">Le mail n\'a pas été envoyé. Veuillez reessayer.</string>
    <string name="mail_is_sent">Mail envoyé.</string>
    <string name="this_email_is_not_recognized">Ce login n\'est pas reconnu, renseignez un login qui est a été utilisé dans cette application.</string>
    <string name="error_code_verification">Code de vérification incorrect.</string>
    <string name="sms_code_send">Le code de vérification à été envoyé.</string>
    <string name="validate">Validé</string>
    <string name="cycle">"Cycle : "</string>
    <string name="classe">"Classe : "</string>
    <string name="libel">"Libelle : "</string>
</resources>