<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/action_kilt"
        android:enabled="true"
        android:icon="@drawable/ic_commended"
        android:title="@string/cart" />
    <item
        android:id="@+id/action_message"
        android:enabled="true"
        android:icon="@drawable/ic_message"
        android:title="@string/message" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
</menu>