<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:gravity="fill"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:title="@string/notifications"
        app:textAllCaps="false">

        <SwitchPreference
            android:defaultValue="false"
            android:gravity="clip_vertical"
            android:key="allow_notification"
            android:persistent="true"
            android:summary="@string/allow_notification_summary"
            android:title="@string/allow_notifications" />
    </PreferenceCategory>
</PreferenceScreen>