<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/account_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.Account">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_height="?actionBarSize">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:titleTextColor="@color/colorTextPrimary"
            app:title="@string/my_account" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_subscribed"
                android:paddingVertical="15dp"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="@dimen/baseTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_subscribed" />
            <Button
                android:id="@+id/button_account_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginBottom="8dp"
                android:textSize="@dimen/baseTextSize"
                android:paddingVertical="10dp"
                android:text="@string/sign_in_up" />
            <TextView
                android:id="@+id/my_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:layout_marginTop="5dp"
                android:textSize="19sp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/my_information" />
            <View
                android:background="@color/colorDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/administration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:textSize="19sp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/administration" />
            <View
                android:background="@color/colorDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:textSize="19sp"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackground"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/settings" />
            <View
                android:background="@color/colorDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:textSize="19sp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/help" />
            <View
                android:background="@color/colorDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/note_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:textSize="19sp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/note_app" />
            <View
                android:background="@color/colorDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:textSize="19sp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/contact_us" />
            <View
                android:background="@color/colorDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:id="@+id/disconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:textSize="19sp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackground"
                android:textColor="@color/googleColor"
                android:text="@string/disconnect" />

            <include layout="@layout/copyright" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>