<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="10dp"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".administration.AddClass">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/baseTextSize"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:text="@string/classe" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/title"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/classe"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textSize="@dimen/baseTextSize" />
    <TextView
        android:id="@+id/label_libel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/baseTextSize"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:text="@string/libel" />

    <EditText
        android:id="@+id/edit_libel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/title"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/libel"
        android:inputType="textCapWords"
        android:textColor="@color/black"
        android:textSize="@dimen/baseTextSize" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/cycle"
        app:errorEnabled="true"
        app:helperTextEnabled="true">

        <AutoCompleteTextView
            android:id="@+id/edit_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/baseTextSize"
            android:inputType="none"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/validate"
        android:textAllCaps="false"
        android:textSize="@dimen/baseTextSize" />
</LinearLayout>